--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -81,11 +81,13 @@ a {
   color: #1f2020;
   text-wrap: balance;
   min-height: 100%;
+  background-color: #f2f2f2;
 }
 
 .page__container {
   min-width: 375px;
-  min-height: 100%;
+  max-width: 1920px;
+  min-height: 100dvh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -95,6 +97,11 @@ a {
 .wrapper {
   min-width: 330px;
   padding: 0 3.4vw;
+
+  @media (max-width: 1440px) {
+    padding: 2.4vw;
+  }
+
   @media (max-width: 376px) {
     padding: 24px;
   }
