--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -67,7 +67,7 @@ a {
 }
 
 .page {
-  height: 100%;
+  // height: 100%;
   touch-action: manipulation;
 }
 
@@ -88,10 +88,9 @@ a {
 .page__container {
   min-width: 375px;
   max-width: 1920px;
-  min-height: 100dvh;
+ 
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+ 
   background-color: #ffffff;
   position: relative;
 }
