fix: пофиксил БЭМ

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -93,8 +93,10 @@ a {
       cursor: pointer;
       pointer-events: auto;
 
-      &:hover {
-        filter: brightness(0);
+      @media (hover: hover) and (pointer: fine) {
+        &:hover {
+          filter: brightness(0);
+        }
       }
     }
   }
@@ -103,9 +105,9 @@ a {
 .page__container {
   min-width: 375px;
   max-width: 1920px;
- 
+
   margin: 0 auto;
- 
+
   background-color: #ffffff;
   position: relative;
 }
